--- a/简历问题准备.md
+++ b/简历问题准备.md
@@ -1365,7 +1365,7 @@ DNS使用TCP协议与UDP协议视情况而定，一般来说是认为使用的UD
 
 - 三次握手才可以阻止重复历史连接的初始化（主要原因）；
   
-  **如果是两次握手连接，就无法阻止历史连接**，在两次握手的情况下，**服务端在收到 SYN 报文后，就进入ESTABLISHED 状态**，意味着这时可以给对方发送数据，但是客户端此时还没有进入 ESTABLISHED 状态，假设这次是历史连接，**客户端判断到此次连接为历史连接，那么就会回 RST 报文来断开连接**，而服务端在第一次握手的时候就进入 ESTABLISHED 状态，所以它可以发送数据的，但是它并不知道这个是历史连接，它只有在收到 RST 报文后，才会断开连接。
+  **如果是两次握手连接，就无法阻止历史连接**，在两次握手的情况下，**服务端在收到 SYN 报文后，就进入ESTABLISHED 状态**，意味着这时可以给对方发送数据，但是客户端此时还没有进入 ESTABLISHED 状态，假设这次是历史连接，**客户端判断到此次连接为历史连接，那么就会回 RST 报文来断开连接**，而服务端在第一次握手的时候就进入 ESTABLISHED 状态，所以它可以发送数据的，但是它并不知道这个是历史连接，它只有在收到 RST 报文后，才会断开连接
 
 - 三次握手才可以同步双方的初始序列号，如果只有两次握手只保证了一方的初始序列号能被对方成功接收，四次握手是将三次握手的第二次握手拆分为两次，第一次把ACK 置1，同时确认应答号为客户端初始序号+1，第二次把SYN置1，同时初始化自己的序号；
 
@@ -1389,9 +1389,7 @@ DNS使用TCP协议与UDP协议视情况而定，一般来说是认为使用的UD
 
 #### 第三次握手丢失了，会发生什么？
 
-因为这个第三次握手的 ACK 是对第二次握手的 SYN 的确认报文，所以当第三次握手丢失了，如果服务端那一方迟迟收不到这个确认报文，就会触发超时重传机制，重传 SYN-ACK 报文，直到收到第三次握手，或者达到最大重传次数。
-
-注意，**ACK 报文是不会有重传的，当 ACK 丢失了，就由对方重传对应的报文**。
+因为这个第三次握手的 ACK 是对第二次握手的 SYN 的确认报文，所以当第三次握手丢失了，如果服务端那一方迟迟收不到这个确认报文，就会触发超时重传机制，重传 SYN-ACK 报文，直到收到第三次握手，或者达到最大重传次数。注意，**ACK 报文是不会有重传的，当 ACK 丢失了，就由对方重传对应的报文**。
 
 #### 为什么需要 TIME_WAIT 状态？
 
