--- a/简历问题准备.md
+++ b/简历问题准备.md
@@ -2635,3 +2635,41 @@ int main(){
 （1）当使用join()函数时，主调线程阻塞，等待被调线程终止，然后主调线程回收被调线程资源，并继续运行；
 
 （2）当使用detach()函数时，主调线程继续运行，被调线程驻留后台运行，主调线程无法再取得该被调线程的控制权。当主调线程结束时，由运行时库负责清理与被调线程相关的资源。
+
+### 多线程线程交替打印
+
+```cpp
+#include <iostream>
+#include <thread>
+#include <mutex>
+#include <condition_variable>
+
+std::mutex mtx;
+std::condition_variable cv;
+int count = 0;
+
+void printChar(char ch, int target) {
+    for (int i = 0; i < 10; ++i) {
+        std::unique_lock<std::mutex> lock(mtx);
+        cv.wait(lock, [target]() { return count % 3 == target; });
+        std::cout << ch;
+        ++count;
+        cv.notify_all();
+    }
+}
+
+int main() {
+    std::thread t1(printChar, 'A', 0);
+    std::thread t2(printChar, 'B', 1);
+    std::thread t3(printChar, 'C', 2);
+
+    t1.join();
+    t2.join();
+    t3.join();
+
+    std::cout << std::endl;
+
+    return 0;
+}
+```
+
