--- a/数据结构.md
+++ b/数据结构.md
@@ -1103,16 +1103,16 @@ public:
 ### 容器以及容器适配器
 
 **熟悉 vector,deque的简单使用**
-![顺序容器类型](../../../%E5%9B%BE%E7%89%87/%E6%A1%8C%E9%9D%A2%E6%96%87%E6%A1%A3%E5%9B%BE%E7%89%87/%E9%A1%BA%E5%BA%8F%E5%AE%B9%E5%99%A8%E7%B1%BB%E5%9E%8B.png)
+![顺序容器类型](https://gitee.com/juzihhu/image_bed/raw/master/img/%E9%A1%BA%E5%BA%8F%E5%AE%B9%E5%99%A8%E7%B1%BB%E5%9E%8B.png)
 
 **顺序容器的相关操作**
 - 向容器中添加元素
   ![向顺序容器添加元素](https://gitee.com/juzihhu/image_bed/raw/master/img/%E5%90%91%E9%A1%BA%E5%BA%8F%E5%AE%B9%E5%99%A8%E6%B7%BB%E5%8A%A0%E5%85%83%E7%B4%A0.png)
 
 - 删除容器中元素
-  ![顺序容器的删除操作](../../../%E5%9B%BE%E7%89%87/%E6%A1%8C%E9%9D%A2%E6%96%87%E6%A1%A3%E5%9B%BE%E7%89%87/%E9%A1%BA%E5%BA%8F%E5%AE%B9%E5%99%A8%E7%9A%84%E5%88%A0%E9%99%A4%E6%93%8D%E4%BD%9C.png)
+  ![顺序容器的删除操作](https://gitee.com/juzihhu/image_bed/raw/master/img/%E9%A1%BA%E5%BA%8F%E5%AE%B9%E5%99%A8%E7%9A%84%E5%88%A0%E9%99%A4%E6%93%8D%E4%BD%9C.png)
 - 访问容器中元素
-  ![在顺序容器中访问元素](../../../%E5%9B%BE%E7%89%87/%E6%A1%8C%E9%9D%A2%E6%96%87%E6%A1%A3%E5%9B%BE%E7%89%87/%E5%9C%A8%E9%A1%BA%E5%BA%8F%E5%AE%B9%E5%99%A8%E4%B8%AD%E8%AE%BF%E9%97%AE%E5%85%83%E7%B4%A0.png)
+  ![在顺序容器中访问元素](https://gitee.com/juzihhu/image_bed/raw/master/img/%E5%9C%A8%E9%A1%BA%E5%BA%8F%E5%AE%B9%E5%99%A8%E4%B8%AD%E8%AE%BF%E9%97%AE%E5%85%83%E7%B4%A0.png)
 - 迭代器
   ```c++
   //获取容器的迭代器
@@ -1125,7 +1125,7 @@ public:
 - **priority_queue**
   
 
-![容器适配器的类型以及操作](../../../%E5%9B%BE%E7%89%87/%E6%A1%8C%E9%9D%A2%E6%96%87%E6%A1%A3%E5%9B%BE%E7%89%87/%E5%AE%B9%E5%99%A8%E9%80%82%E9%85%8D%E5%99%A8%E7%9A%84%E7%B1%BB%E5%9E%8B%E4%BB%A5%E5%8F%8A%E6%93%8D%E4%BD%9C.png)
+![容器适配器的类型以及操作](https://gitee.com/juzihhu/image_bed/raw/master/img/%E5%AE%B9%E5%99%A8%E9%80%82%E9%85%8D%E5%99%A8%E7%9A%84%E7%B1%BB%E5%9E%8B%E4%BB%A5%E5%8F%8A%E6%93%8D%E4%BD%9C.png)
 
 
 ### vector
@@ -4773,224 +4773,5 @@ int main() {
     return 0;
 }
 
-```
-
-**2. 前缀表与next数组**  
-
-**next数组就可以是前缀表，常用的两种实现:**
-*1.把前缀表统一减一
-2.右移一位，初始位置为-1之后作为next数组*
-
-**构造next[]**
-
-构造next数组其实就是计算模式串s，前缀表的过程。 主要有如下三步(以前缀表统一减一为例)：
-
-1. 初始化
-2. 处理前后缀不相同的情况
-3. 处理前后缀相同的情况
-
-- 初始化
-
-    定义两个指针i和j，**j指向前缀起始位置，i指向后缀起始位置**
-    然后还要对next数组进行初始化赋值，如下：
-
-    ```c++
-    int j = -1;
-    next[0] = j;
-    ```
-
-    *j 为什么要初始化为 -1呢，因为之前说过 前缀表要统一减一的操作仅仅是其中的一种实现，
-    我们这里选择j初始化为-1，下文我还会给出j不初始化为-1的实现代码。
-    next[i] 表示 i（包括i）之前最长相等的前后缀长度（其实就是 j）
-    所以初始化next[0] = j 。*    
-   
-- 处理前后缀不相同的情况
-    因为j初始化为-1，那么i就从1开始，进行s[i] 与 s[j+1]的比较。
-    所以遍历模式串s的循环下标i 要从 1开始，代码如下：
-    `for (int i = 1; i < s.size(); i++) {`
-    如果 s[i] 与 s[j+1]不相同，也就是遇到 前后缀末尾不相同的情况，就要向前回退
-    next[j]就是记录着j（包括j）之前的子串的相同前后缀的长度
-    那么 s[i] 与 s[j+1] 不相同，就要找 j+1前一个元素在next数组里的值（就是next[j]）
-
-    ```c++
-    while (j >= 0 && s[i] != s[j + 1]) { // 前后缀不相同了
-        j = next[j]; // 向前回退
-    }
-    ```
-
-- 处理前后缀相同的情况
-  *如果 s[i] 与 s[j + 1] 相同，那么就同时向后移动i 和j 说明找到了相同的前后缀，
-  同时还要将j（前缀的长度）赋给next[i], 因为next[i]要记录相同前后缀的长度*
-
-    ```c++
-    if (s[i] == s[j + 1]) { // 找到相同的前后缀
-        j++;
-    }
-    next[i] = j;
-    ```
-
-**整体代码如下**
-
-```c++
-void getNext(int* next, const string& s){
-    int j = -1;
-    next[0] = j;
-    for(int i = 1; i < s.size(); i++) { // 注意i从1开始
-        while (j >= 0 && s[i] != s[j + 1]) { // 前后缀不相同了
-            j = next[j]; // 向前回退
-        }
-        if (s[i] == s[j + 1]) { // 找到相同的前后缀
-            j++;
-        }
-        next[i] = j; // 将j（前缀的长度）赋给next[i]
-    }
-}
-```
-
-next[]构造过程
-![构造next[]数组](./数据结构/next[]构造.gif)
-
-**3. 利用next数组来做匹配**
-
-```c++
-int j = -1; // 因为next数组里记录的起始位置为-1
-for (int i = 0; i < s.size(); i++) { // 注意i就从0开始
-    while(j >= 0 && s[i] != t[j + 1]) { // 不匹配
-        j = next[j]; // j 寻找之前匹配的位置
-    }
-    if (s[i] == t[j + 1]) { // 匹配，j和i同时向后移动
-        j++; // i的增加在for循环里
-    }
-    if (j == (t.size() - 1) ) { // 文本串s里出现了模式串t
-        return (i - t.size() + 1);
-    }
-}
-```
-
-**前缀表统一减一 C++代码实现**
-
-```c++
-class Solution {
-public:
-    void getNext(int* next, const string& s) {
-        int j = -1;
-        next[0] = j;
-        for(int i = 1; i < s.size(); i++) { // 注意i从1开始
-            while (j >= 0 && s[i] != s[j + 1]) { // 前后缀不相同了
-                j = next[j]; // 向前回退
-            }
-            if (s[i] == s[j + 1]) { // 找到相同的前后缀
-                j++;
-            }
-            next[i] = j; // 将j（前缀的长度）赋给next[i]
-        }
-    }
-    int strStr(string haystack, string needle) {
-        if (needle.size() == 0) {
-            return 0;
-        }
-        int next[needle.size()];
-        getNext(next, needle);
-        int j = -1; // // 因为next数组里记录的起始位置为-1
-        for (int i = 0; i < haystack.size(); i++) { // 注意i就从0开始
-            while(j >= 0 && haystack[i] != needle[j + 1]) { // 不匹配
-                j = next[j]; // j 寻找之前匹配的位置
-            }
-            if (haystack[i] == needle[j + 1]) { // 匹配，j和i同时向后移动
-                j++; // i的增加在for循环里
-            }
-            if (j == (needle.size() - 1) ) { // 文本串s里出现了模式串t
-                return (i - needle.size() + 1);
-            }
-        }
-        return -1;
-    }
-};
-
-```
-
-**前缀表（不减一不右移）C++实现**
-
-```c++
-class Solution {
-public:
-    void getNext(int* next, const string& s) {
-        int j = 0;
-        next[0] = 0;
-        for(int i = 1; i < s.size(); i++) {
-            while (j > 0 && s[i] != s[j]) {
-                j = next[j - 1];
-            }
-            if (s[i] == s[j]) {
-                j++;
-            }
-            next[i] = j;
-        }
-    }
-    int strStr(string haystack, string needle) {
-        if (needle.size() == 0) {
-            return 0;
-        }
-        int next[needle.size()];
-        getNext(next, needle);
-        int j = 0;
-        for (int i = 0; i < haystack.size(); i++) {
-            while(j > 0 && haystack[i] != needle[j]) {
-                j = next[j - 1];
-            }
-            if (haystack[i] == needle[j]) {
-                j++;
-            }
-            if (j == needle.size() ) {
-                return (i - needle.size() + 1);
-            }
-        }
-        return -1;
-    }
-};
-```
-[leetcode459 重复的子字符串](https://leetcode-cn.com/problems/repeated-substring-pattern/)  
-
-*给定一个非空的字符串，判断它是否可以由它的一个子串重复多次构成。给定的字符串只含有小写英文字母，并且长度不超过10000。
-示例 1:
-输入: "abab"
-输出: True
-解释: 可由子字符串 "ab" 重复两次构成。*
-**思路**
-*next[]为相等前后缀表统一减一;
-next[len-1]!=-1 最长串存在相等前后缀
-abcabcabc
-len_s-(next[len_s-1]+1)为一个周期
-若len为周期倍数，返回true*
-
-```c++
-class Solution {
-public:
-    void getNext (int* next, const string& s){
-        next[0] = -1;
-        int j = -1;
-        for(int i = 1;i < s.size(); i++){
-            while(j >= 0 && s[i] != s[j+1]) {
-                j = next[j];
-            }
-            if(s[i] == s[j+1]) {
-                j++;
-            }
-            next[i] = j;
-        }
-    }
-    bool repeatedSubstringPattern (string s) {
-        if (s.size() == 0) {
-            return false;
-        }
-        int next[s.size()];
-        getNext(next, s);
-        int len = s.size();
-        if (next[len - 1] != -1 && len % (len - (next[len - 1] + 1)) == 0) {
-            return true;
-        }
-        return false;
-    }
-};
 ```
 
