--- a/数据结构.md
+++ b/数据结构.md
@@ -565,6 +565,65 @@ public:
 ```
 ![](https://gitee.com/juzihhu/image_bed/raw/master/img/%E5%8F%8D%E8%BD%AC%E9%93%BE%E8%A1%A8%E9%80%92%E5%BD%92%E6%A0%88.png)
 
+[25. K 个一组翻转链表](https://leetcode.cn/problems/reverse-nodes-in-k-group/)
+
+给你链表的头节点 `head` ，每 `k` 个节点一组进行翻转，请你返回修改后的链表。
+
+`k` 是一个正整数，它的值小于或等于链表的长度。如果节点总数不是 `k` 的整数倍，那么请将最后剩余的节点保持原有顺序。
+
+你不能只是单纯的改变节点内部的值，而是需要实际进行节点交换。
+
+```cpp
+class Solution {
+public:
+    pair<ListNode*,ListNode*> reverse(ListNode* head,ListNode* tail){
+        ListNode* pre=nullptr;
+        ListNode* cur=head;
+        while(cur!=tail){
+            ListNode* temp=cur->next;
+            cur->next=pre;
+            pre=cur;
+            cur=temp;
+        }
+        cur->next=pre;
+        pre=cur;
+        return{pre,head};
+    }
+    ListNode* reverseKGroup(ListNode* head, int k) {
+        ListNode* hair=new ListNode(0);
+        hair->next=head;
+        ListNode* pre=hair;
+
+        while(head){
+            ListNode* tail=pre;
+            for(int i=0;i<k;++i){
+               tail=tail->next;
+               if(tail==nullptr){
+                   return hair->next;
+               }
+            }
+            ListNode* nex=tail->next;
+            pair<ListNode*, ListNode*> result = reverse(head, tail);
+            head = result.first;
+            tail = result.second;
+
+            pre->next=head;
+            tail->next=nex;
+            pre=tail;
+            head=tail->next;
+
+        }
+        return hair->next;
+    }
+};
+```
+
+
+
+
+
+
+
 [leetcode24 两两交换链表中节点](https://leetcode-cn.com/problems/swap-nodes-in-pairs/submissions/)
 ![](https://gitee.com/juzihhu/image_bed/raw/master/img/04.png)
 ![](https://gitee.com/juzihhu/image_bed/raw/master/img/05.png)
@@ -4734,6 +4793,65 @@ int main(){
 
 
 
+
+
+```cpp
+#include <iostream>
+#include <vector>
+
+using namespace std;
+
+// 桶排序
+void bucketSort(vector<int>& data) {
+  // 确定桶的个数
+  int bucketSize = 10;
+
+  // 创建桶
+  vector<vector<int>> buckets(bucketSize);
+
+  // 将待排序的元素分配到桶中
+  for (int i = 0; i < data.size(); i++) {
+    int bucketIndex = data[i] / bucketSize;
+    buckets[bucketIndex].push_back(data[i]);
+  }
+
+  // 对每个桶中的元素进行排序
+  for (int i = 0; i < buckets.size(); i++) {
+    sort(buckets[i].begin(), buckets[i].end());
+  }
+
+  // 按照桶的顺序依次将元素输出
+  for (int i = 0; i < buckets.size(); i++) {
+    for (int j = 0; j < buckets[i].size(); j++) {
+      cout << buckets[i][j] << " ";
+    }
+  }
+}
+
+int main() {
+  vector<int> data = {2, 5, 1, 3, 4, 6, 7, 8, 9, 10};
+
+  cout << "原始数据：" << endl;
+  for (int i = 0; i < data.size(); i++) {
+    cout << data[i] << " ";
+  }
+  cout << endl;
+
+  bucketSort(data);
+
+  cout << "排序后的数据：" << endl;
+  for (int i = 0; i < data.size(); i++) {
+    cout << data[i] << " ";
+  }
+  cout << endl;
+
+  return 0;
+}
+
+```
+
+
+
 ### 快速排序
 
 ```cpp
@@ -4773,5 +4891,83 @@ int main() {
     return 0;
 }
 
+```
+
+面试总结
+
+```cpp
+int pivot(std::vector<int>& nums, int left, int right); // 普通快速排序
+int pivot_stable(std::vector<int>& nums, int left, int right); // 稳定的快速排序
+std::pair<int, int> pivot_three(std::vector<int>& nums, int left, int right); // 三路归并
+v
+    oid quickSort(std::vector<int>& nums, int left, int right)
+{
+    if (left >= right)
+        return;
+    // int piv = pivot(nums, left, right);
+    // int piv = pivot_stable(nums, left, right);
+
+    // quickSort(nums, left, piv - 1);
+    // quickSort(nums, piv + 1, right);
+    std::pair<int, int> piv = pivot_three(nums, left, right);
+    quickSort(nums, left, piv.first - 1);
+    quickSort(nums, piv.second + 1, right);
+}
+
+int pivot(std::vector<int>& nums, int left, int right)
+{
+    int p = nums[left];
+    while (left < right) {
+        while (left < right && nums[right] > p)
+            --right;
+        nums[left] = nums[right];
+        while (left < right && nums[left] <= p)
+            ++left;
+        nums[right] = nums[left];
+    }
+    nums[left] = p;
+    return left;
+}
+int pivot_stable(std::vector<int>& nums, int left, int right)
+{
+    std::vector<int> vec_p(right - left + 1, 0);
+    int piv = nums[left];
+    int vec_lf = 0, local = 0;
+    for (int i = left + 1; i <= right; ++i) {
+        if (nums[i] < piv)
+            vec_p[vec_lf++] = nums[i];
+    }
+    local = vec_lf;
+    vec_p[vec_lf++] = piv;
+    for (int i = left + 1; i <= right; ++i) {
+        if (nums[i] >= piv)
+            vec_p[vec_lf++] = nums[i];
+    }
+    vec_lf = 0;
+    int res = 0;
+    for (int i = left; i <= right; i++) {
+        if (local == vec_lf) {
+            res = i;
+        }
+        nums[i] = vec_p[vec_lf++];
+    }
+    return res;
+}
+
+std::pair<int, int> pivot_three(std::vector<int>& nums, int left, int right)
+{
+    int piv = nums[left];
+    int cur = left + 1;
+    while (cur <= right) {
+        if (nums[cur] < piv) {
+            std::swap(nums[cur++], nums[left++]); // cur++
+        } else if (nums[cur] > piv) {
+            std::swap(nums[cur], nums[right--]); // cur right--
+        } else {
+            cur++;
+        }
+    }
+    return { left, right };
+}
 ```
 
